--- a/404.md
+++ b/404.md
@@ -5,4 +5,4 @@ title: 404 - Page not found
 
 Sorry, we can't find the post you're looking for. Try heading back to the [main page]({{ site.baseurl }}/).
 
-[<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
+[<img src="{{ site.baseurl }}/images/404.jpg" alt="Oops!" style="width: 400px;"/>]({{ site.baseurl }}/)
