rough draft of first 100 days post

--- a/_posts/2016-2-18-first-100-days.md
+++ b/_posts/2016-2-18-first-100-days.md
@@ -4,9 +4,57 @@ title: First 100 Days
 customCSS:
   - /styles/first_100_days.css
 customJS:
-  - https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.0/jquery.waypoints.min.js
   - https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.15/d3.js
   - /scripts/first_100_days.js
 ---
 
-Blog text here
+Just over three months have gone by since PeakBucket <a href="/hello-world">went live</a>. We'd like to take this opportunity to give you a look back at what's happened on the site thus far, in addition to giving you a look ahead at what you'll be seeing in the very near future.
+
+## Users
+<span id='user-count'></span> <a href="http://www.peakbucket.com/users" target="_parent">users</a> have signed up from <span id='user-countries'></span> countries, including <span id='user-us-states'></span> U.S. states and the capital. The top 10 user locations so far are:
+<svg id="user-top-10-loc" class="chart"></svg>
+
+
+## Peaks
+<p>We've grown from <span id="peaks-then"></span> to <span id="peaks-now"></span> <a href="http://www.peakbucket.com/peaks" target="_parent">peaks</a>, and our users have logged <span id="activity-peaks"></span> summits. The top 10 most summited peaks so far are:</p>
+<svg id="activity-peak-top-10-summits" class="chart"></svg>
+
+## Lists
+<p>We've grown from <span id="lists-then"></span> to <span id="lists-now"></span> <a href="http://www.peakbucket.com/lists" target="_parent">lists</a>. The top 10 most pursued lists so far are:</p>
+<svg id="user-lists-top-10" class="chart"></svg>
+
+## Completion Styles
+<p>PeakBucket users like <a href="https://peakbucket.com/faq#what-are-completion-styles" target="_parent">completion styles</a>. <span id="non-all-season-c-styles"></span> of list progress entries logged so far are for Winter, Four Season and Grid finishes.</p>
+<svg id="user-c-styles" class="chart"></svg>
+
+## Activities
+<p>Of the <span id="activity-count"></span> <a href="https://peakbucket.com/faq#what-is-an-activity" target="_parent">activities</a> PeakBucket users have logged so far, <span id="activities-with-stats"></span> included distance and elevation gain. Here are the total stats for those activities:</p>
+<div class="button-group-holder">
+  <div class="button-group-wrap">
+    <ul class="button-group">
+      <li><a href="javascript:void(0)" id="select-imperial" class="button big pill select-btn active" onClick="post.handleUnitSelection('imperial')">Imperial</a></li>
+      <li><a href="javascript:void(0)" id="select-metric" class="button big pill select-btn" onClick="post.handleUnitSelection('metric')">Metric</a></li>
+    </ul>
+  </div>
+</div>
+<div id="activity-stats-container">
+  <div class='activity-stat'>
+    <h3>Distance</h3>
+    <h1><span id="total-activity-distance"></span></h1>
+    <p id="distance-units">Miles</p>
+    <small class="stats-reference"><span id="us-distance-multiple"></span> times the distance across the U.S.</small>
+  </div>
+  <div class='activity-stat'>
+    <h3>Elevation Gain</h3>
+    <h1><span id="total-activity-elevation-gain"></span></h1>
+    <p id="elevation-units">Feet</p>
+    <small class="stats-reference"><span id="everest-elevation-multiple"></span> times the elevation of Mount Everest</small>
+  </div>
+</div>
+
+## Coming Soon on PeakBucket
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+– Colin & Max
