fill in placeholder text in coming soon section of first 100 days post

--- a/_posts/2016-02-18-first-100-days.md
+++ b/_posts/2016-02-18-first-100-days.md
@@ -55,6 +55,6 @@ Just over three months have gone by since PeakBucket <a href="/hello-world">went
 </div>
 
 ## Coming Soon on PeakBucket
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+PeakBucket continues to be a work in progress. We're continually adding peaks and lists; if there's a particular peak or list that you'd like to see on the site, then don't hesitate to <a href="https://peakbucket.com/contact" target="_parent">contact us</a>. We're also hard at work on a number of new features, including an enhanced user profile, activity comments, companions and more. As always, we welcome feedback, so please let us know what you’d like to see on PeakBucket!
 
 – Colin & Max
