--- a/_posts/2016-02-16-first-100-days.md
+++ b/_posts/2016-02-16-first-100-days.md
@@ -55,6 +55,6 @@ Just over three months have gone by since PeakBucket <a href="/hello-world">went
 </div>
 
 ## Coming Soon on PeakBucket
-PeakBucket continues to be a work in progress. We're continually adding peaks and lists; if there's a particular peak or list that you'd like to see on the site, then don't hesitate to <a href="https://peakbucket.com/contact" target="_parent">contact us</a>. We're also hard at work on a number of new features, including an enhanced user profile, activity comments, companions and more. As always, we welcome feedback, so please let us know what you’d like to see on PeakBucket!
+PeakBucket continues to be a work in progress. We're continually adding peaks and lists; if there's a particular peak or list that you'd like to see on the site, then don't hesitate to <a href="https://peakbucket.com/contact" target="_parent">contact us</a>. We're also hard at work on a number of new features, including an enhanced user profile, activity comments, companions and more. As always, we welcome your feedback, so please let us know what you’d like to see on PeakBucket!
 
 – Colin & Max
