revisions to first 100 days

--- a/_posts/2016-02-16-first-100-days.md
+++ b/_posts/2016-02-16-first-100-days.md
@@ -10,7 +10,7 @@ customJS:
   - /scripts/first_100_days.js
 ---
 
-Just over three months have gone by since PeakBucket <a href="/hello-world">went live</a>. We'd like to take this opportunity to give you a look back at what's happened on the site thus far, in addition to giving you a look ahead at what you'll be seeing in the very near future.
+Just over three months have passed since PeakBucket <a href="/hello-world">went live</a>. We'd like to take this opportunity to give you a look back at what's happened on the site thus far, in addition to giving you a look ahead at what you'll be seeing in the very near future.
 
 ## Users
 <span id='user-count'></span> <a href="http://www.peakbucket.com/users" target="_parent">users</a> have signed up from <span id='user-countries'></span> countries, including <span id='user-us-states'></span> U.S. states and the capital. The top 10 user locations so far are:
@@ -26,7 +26,7 @@ Just over three months have gone by since PeakBucket <a href="/hello-world">went
 <svg id="user-lists-top-10" class="chart"></svg>
 
 ## Completion Styles
-<p>PeakBucket users like <a href="https://peakbucket.com/faq#what-are-completion-styles" target="_parent">completion styles</a>. <span id="non-all-season-c-styles"></span> of list progress entries logged so far are for Winter, Four Season and Grid finishes.</p>
+<p>PeakBucket users like <a href="https://peakbucket.com/faq#what-are-completion-styles" target="_parent">completion styles</a>. <span id="non-all-season-c-styles"></span> of list progress entries logged so far are for Winter, Four Season and Grid finishes:</p>
 <svg id="user-c-styles" class="chart"></svg>
 
 ## Activities
@@ -55,6 +55,6 @@ Just over three months have gone by since PeakBucket <a href="/hello-world">went
 </div>
 
 ## Coming Soon on PeakBucket
-PeakBucket continues to be a work in progress. We're continually adding peaks and lists; if there's a particular peak or list that you'd like to see on the site, then don't hesitate to <a href="https://peakbucket.com/contact" target="_parent">contact us</a>. We're also hard at work on a number of new features, including an enhanced user profile, activity comments, companions and more. As always, we welcome your feedback, so please let us know what you’d like to see on PeakBucket!
+PeakBucket continues to be a work in progress. We're perpetually adding peaks and lists; if there's a particular peak or list that you'd like to see on the site, then don't hesitate to <a href="https://peakbucket.com/contact" target="_parent">contact us</a>. We're also hard at work on a number of new features, including an enhanced user profile, activity comments, companions and more. As always, we welcome your feedback, so please let us know what you’d like to see on PeakBucket!
 
 – Colin & Max
