--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 title: 404 - Page not found
 ---
 
-Sorry, we can't find the post you're looking for. Try heading back to the [main page]({{ site.baseurl }}/).
+Sorry, we can't find the post you're looking for. Try heading back to the [main page]({{ site.url }}/).
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Oops!" style="width: 400px;"/>]({{ site.baseurl }}/)
