route all hrefs through site.url (blog.peakbucket.com)

--- a/_posts/2016-02-16-first-100-days.md
+++ b/_posts/2016-02-16-first-100-days.md
@@ -10,7 +10,7 @@ customJS:
   - /scripts/first_100_days.js
 ---
 
-Just over three months have passed since PeakBucket <a href="/hello-world">went live</a>. We'd like to take this opportunity to give you a look back at what's happened on the site thus far, in addition to giving you a look ahead at what you'll be seeing in the very near future.
+Just over three months have passed since PeakBucket <a href="http://blog.peakbucket.com/hello-world" target="_parent">went live</a>. We'd like to take this opportunity to give you a look back at what's happened on the site thus far, in addition to giving you a look ahead at what you'll be seeing in the very near future.
 
 ## Users
 <span id='user-count'></span> <a href="http://www.peakbucket.com/users" target="_parent">users</a> have signed up from <span id='user-countries'></span> countries, including <span id='user-us-states'></span> U.S. states and the capital. The top 10 user locations so far are:
